--- a/brochure/example-copyright.tex
+++ b/brochure/example-copyright.tex
@@ -1,7 +1,9 @@
 \documentclass[]{HyperedReport}
 
+\input{ream-context.tex}
+
 \begin{document}
 
-\copyrightpage{Responsible editor: Felis Mauris, Tempor Montes 1, 1000 Pellentesque (2022)}
+\copyrightpage{\replace{editor}}
 
 \end{document}
