Add a blank page example.

--- a/brochure/HyperedReport.cls
+++ b/brochure/HyperedReport.cls
@@ -343,6 +343,18 @@
 }
 
 %----------------------------------------------------------------------------------------
+%	BLANK PAGE
+%----------------------------------------------------------------------------------------
+
+\newcommand{\blankpage}{
+  \thispagestyle{empty}
+
+  \mbox{}
+
+  \newpage
+}
+
+%----------------------------------------------------------------------------------------
 %	COPYRIGHT PAGE
 %----------------------------------------------------------------------------------------
 
